HIVE-28869: Incorporated review comments.